Fix text color on chips for dark mode

--- a/src/components/pages/Resume.css
+++ b/src/components/pages/Resume.css
@@ -2,6 +2,10 @@
    color: #f5f5f5;
 }
 
+.dark-mode .MuiChip-label {
+   color: black;
+}
+
 .resume-download-button-container {
    display: flex;
    justify-content: center;
